# pyeventstudy

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements.txt  setup.py
debug_scripts/: check_inversion.py  compare_coefficients.py
docs/: API.md
eventstudypy/: __init__.py  data_prep.py  estimation.py  event_study.py  example_data.csv  plotting.py  testing.py
examples/: example.py
tests/: README.md  README_PYTEST.md  __init__.py  compare_with_R.py  conftest.py  pytest.ini  run_all_tests.py  run_single_comparison.py  test_add_cis.py  test_additional_fixed_effects.py  test_basic.py  test_complete_r_parity.py  test_comprehensive_scenarios.py  test_compute_shifts.py  test_event_study.py  test_linear_hypothesis.py  test_parameter_recovery.py  test_r_parity.py
