[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "eventstudypy"
version = "0.1.0"
description = "Event study analysis in Python - A Python implementation of the eventstudyr R package"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "EventStudyPy Contributors"},
]
maintainers = [
    {name = "EventStudyPy Contributors"},
]
keywords = ["event-study", "econometrics", "panel-data", "causal-inference", "difference-in-differences"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "pyfixest>=0.18.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "statsmodels>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.910",
    "isort>=5.0",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[project.urls]
Homepage = "https://github.com/eventstudypy/eventstudypy"
Documentation = "https://github.com/eventstudypy/eventstudypy"
Repository = "https://github.com/eventstudypy/eventstudypy"
Issues = "https://github.com/eventstudypy/eventstudypy/issues"

[tool.setuptools]
packages = ["eventstudypy"]

[tool.setuptools.package-data]
eventstudypy = ["example_data.csv"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true